--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bigelow+Rules&family=Fira+Code:wght@300..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barriecito&family=Bebas+Neue&family=Bigelow+Rules&family=Kavoon&family=Lobster&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Teko:wght@300..700&family=Winky+Sans:ital,wght@0,300..900;1,300..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -17,4 +18,19 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+.main {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+        clip-path: polygon(0px 0%,
+                calc(50% - 0px) 0%,
+                90% 100%,
+                0% 100%);
+        background-image: url("./assets/Heros/Hero_1.jpg");
+        background-size: 50%;
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        z-index: 0px;
 }
